chore: fix z-index issue

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -7,6 +7,10 @@ body,
   overflow: hidden;
 }
 
+#root {
+  isolation: isolate;
+}
+
 html.dark {
   background: black;
   color: white;
